--- a/deployment/kubernetes/env-vars-configmap.yaml
+++ b/deployment/kubernetes/env-vars-configmap.yaml
@@ -5,7 +5,7 @@ data:
   PF_USER_PWD: 2FederateM0re
   PING_IDENTITY_ACCEPT_EULA: "YES"
   REST_API_HOSTNAME: int-docker.cpricelab.com
-  USER_BASE_DN: dc=somethingdifferent.com
+  USER_BASE_DN: dc=customer360.com
 kind: ConfigMap
 metadata:
   creationTimestamp: null
