--- a/deployment/kubernetes/pingfederate-deployment.yaml
+++ b/deployment/kubernetes/pingfederate-deployment.yaml
@@ -74,16 +74,9 @@ spec:
         - containerPort: 9031
         - containerPort: 9999
         resources: {}
-        volumeMounts:
-        - mountPath: /run/secrets/devops-secret
-          name: devops-secret
+        envFrom:
+          - secretRef:
+              name: devops-secret
       restartPolicy: Always
       serviceAccountName: ""
-      volumes:
-      - name: devops-secret
-        secret:
-          items:
-          - key: devops-secret
-            path: devops-secret
-          secretName: devops-secret
 status: {}
