--- a/deployment/kubernetes/pingconfig-cm0-configmap.yaml
+++ b/deployment/kubernetes/pingconfig-cm0-configmap.yaml
@@ -20,16 +20,21 @@ data:
                 "value": "fe92b82b-dc17-4a3d-a864-990a6f0e30d9",
                 "enabled": true
             },
+    	    {
+    	        "key": "paVirtualHost",
+    	        "value": "demo.cpricelab.com",
+    	        "enabled": true
+    	    },
             {
-                "key": "pfAuthnApiUrl",
-                "value": "https://cold-handstand.glitch.me",
-                "enabled": true
+                "key": "pdAdminUrl",
+                "value": "https://pingdirectory:1443",
+                "enable": true
             },
-    	{
-    	    "key": "paVirtualHost",
-    	    "value": "ext-docker.cpricelab.com",
-    	    "enabled": true
-    	}
+            {
+                "key": "pdgAdminURL",
+                "value": "https://pingdatagov:4443",
+                "enabled": true
+            }
         ],
         "_postman_variable_scope": "environment",
         "_postman_exported_at": "2020-02-24T18:49:30.401Z",
