--- a/deployment/kubernetes/pingaccess-ingress.yaml
+++ b/deployment/kubernetes/pingaccess-ingress.yaml
@@ -5,31 +5,17 @@ metadata:
     kubernetes.io/ingress.class: nginx-public-passthrough
     nginx.ingress.kubernetes.io/service-upstream: "true"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
-  name: pingaccess-ingress-customer360
+  name: pingaccess-ingress
   namespace: ping-cloud-devops-eks-cprice
 spec:
   rules:
-  - host: pingaccess-ping-cloud-devops-eks-cprice.ping-devops.com
-    http:
-      paths:
-      # This rule gives external access to the pingaccess AS endpoints
-      - path: /
-        backend:
-          serviceName: pingaccess
-          servicePort: 443
-      - path: /.well-known/acme-challenge/
-        backend:
-          serviceName: pingaccess
-          servicePort: 80
   - host: demo.cpricelab.com
     http:
       paths:
-      # This rule gives external access to the pingaccess AS endpoints
-      - path: /
-        backend:
-          serviceName: pingaccess
-          servicePort: 443
       - path: /.well-known/acme-challenge/
         backend:
           serviceName: pingaccess
           servicePort: 80
+      - backend:
+          serviceName: pingaccess
+          servicePort: 443
