--- a/deployment/kubernetes/pingdatagov-pap-deployment.yaml
+++ b/deployment/kubernetes/pingdatagov-pap-deployment.yaml
@@ -57,7 +57,7 @@ spec:
               key: USER_BASE_DN
               name: env-vars
         image: pingidentity/pingdatagovernancepap:8.1.0.0-EA-edge
-        imagePullPolicy: ""
+        imagePullPolicy: "Always"
         name: pingdatagov-pap
         ports:
         - containerPort: 9443
